--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Unit tests
 
 on:
   push:
-    branches: [ development, main ]
+    branches: [ main ]
   pull_request:
     branches: [ development, staging, main ]
 
