--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "luxon": "2.1.1",
     "node-sass": "4.14.1",
+    "typeface-open-sans": "^1.1.13",
     "typescript": "4.5.2"
   },
   "devDependencies": {
