--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "tsconfig-paths": "3.12.0",
-    "ts-mocha": "8.0.0"
+    "ts-mocha": "8.0.0",
+    "typeface-open-sans": "1.1.13"
   },
   "peerDependencies": {
     "react": "17.0.2",
