--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "luxon": "2.1.1",
     "node-sass": "4.14.1",
-    "typeface-open-sans": "^1.1.13",
     "typescript": "4.5.2"
   },
   "devDependencies": {
@@ -38,8 +37,7 @@
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "tsconfig-paths": "3.12.0",
-    "ts-mocha": "8.0.0",
-    "typeface-open-sans": "1.1.13"
+    "ts-mocha": "8.0.0"
   },
   "peerDependencies": {
     "react": "17.0.2",
