--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "es2015",
       "dom"
     ],
+    "module": "commonjs",
     "target": "ES6",
     "declaration": true,
     "outDir": "dist",
@@ -13,7 +14,6 @@
     "allowJs": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "module": "esnext",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
