--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calend",
-  "version": "0.0.1-beta12",
+  "version": "0.0.1",
   "author": "nibdo",
   "license": "MIT",
   "private": false,
