--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
       "es2015",
       "dom"
     ],
-    "module": "commonjs",
-    "target": "ES6",
+    "module": "esnext",
+    "target": "ES5",
     "declaration": true,
     "outDir": "dist",
     "strict": true,
