--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,10 @@ jobs:
       with:
         timezoneLinux: "Europe/Vienna"
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: 14
+        registry-url: https://registry.npmjs.org/
     - name: Install dependencies
       run: npm i
     - name: Run tests
