--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "license": "MIT",
   "private": false,
   "declaration": true,
-  "main": "index.js",
-  "types": "index.d.ts",
+  "source": "src/index.tsx",
+  "main": "dist/main.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/module.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/nibdo/calend"
   },
   "dependencies": {
+    "@swc/helpers": "^0.2.14",
     "luxon": "2.1.1",
-    "typescript": "4.5.2"
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
+    "@parcel/packager-ts": "^2.0.1",
+    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-typescript-types": "^2.0.1",
     "@types/jest": "27.0.3",
     "@types/luxon": "2.0.7",
     "@types/mocha": "9.0.0",
@@ -31,15 +37,16 @@
     "eslint-plugin-prettier": "4.0.0",
     "gulp": "4.0.2",
     "gulp-concat": "2.6.1",
-    "luxon": "2.1.1",
     "mocha": "9.1.3",
     "node-sass": "4.14.1",
+    "parcel": "^2.0.1",
     "prettier": "2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "ts-mocha": "8.0.0",
-    "tsconfig-paths": "3.12.0"
+    "tsconfig-paths": "3.12.0",
+    "typescript": "4.5.2"
   },
   "peerDependencies": {
     "react": "17.0.2",
@@ -47,7 +54,8 @@
   },
   "scripts": {
     "start": "BROWSER=none PORT=4103 react-scripts start",
-    "build": "npm run compile && npm run copy && npm run compile-scss && gulp && rm -r ./dist/styles/tmp",
+    "build": "parcel build",
+    "watch": "parcel watch",
     "dev": "touch index.css && cp index.css ./dist/styles && npm run compile && npm run copy && npm run compile-scss && gulp && rm -r ./dist/styles/tmp",
     "compile": "tsc --module commonjs",
     "compile-scss": "node-sass ./src/ --output ./dist/styles/tmp",
