--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "author": "nibdo",
   "license": "MIT",
   "private": false,
-  "declaration": true,
   "source": "src/index.tsx",
   "main": "dist/main.js",
   "types": "dist/index.d.ts",
@@ -35,10 +34,7 @@
     "eslint-config-prettier": "5.1.0",
     "eslint-config-react": "1.1.7",
     "eslint-plugin-prettier": "4.0.0",
-    "gulp": "4.0.2",
-    "gulp-concat": "2.6.1",
     "mocha": "9.1.3",
-    "node-sass": "4.14.1",
     "parcel": "^2.0.1",
     "prettier": "2.4.1",
     "react": "17.0.2",
@@ -54,12 +50,8 @@
   },
   "scripts": {
     "start": "BROWSER=none PORT=4103 react-scripts start",
-    "build": "parcel build",
+    "build": "parcel build && npm run copy",
     "watch": "parcel watch",
-    "dev": "touch index.css && cp index.css ./dist/styles && npm run compile && npm run copy && npm run compile-scss && gulp && rm -r ./dist/styles/tmp",
-    "compile": "tsc --module commonjs",
-    "compile-scss": "node-sass ./src/ --output ./dist/styles/tmp",
-    "copy-style": "copyfiles -u 1 \"./src/**/*.scss\" \"dist\"",
     "copy": "cp ./package.json ./dist/ && cp ./LICENSE ./dist/ && cp ./README.md ./dist/",
     "test": "ts-mocha --config ./mocharc.js"
   },
