--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,7 @@
   ],
   "plugins": [
     "react",
-    "@typescript-eslint",
-    "prettier"
+    "@typescript-eslint"
   ],
   "env": {
     "browser": true,
