--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,7 @@ jobs:
       - name: Run tests
         run: npm run test
       - name: Build
-        run: npm run build
-      - name: Copy required files
-        run: npm run copy
+        run: npm run package
 
   publish-npm:
     needs: build
