--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@parcel/transformer-sass": "^2.0.1",
     "@parcel/transformer-typescript-types": "^2.0.1",
     "@storybook/addon-actions": "^6.4.8",
+    "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.4.8",
     "@storybook/addon-links": "^6.4.8",
     "@storybook/preset-scss": "^1.0.3",
