--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "react-dom": "17.0.2"
   },
   "scripts": {
-    "build": "parcel build --detailed-report 5",
+    "tsc-build": "tsc",
+    "build": "npm run tsc-build && parcel build --detailed-report 5",
     "package": "npm run test && npm run build && npm pack",
     "start": "BROWSER=none PORT=4103 react-scripts start",
     "test": "ts-mocha --config ./mocharc.js",
-    "storybook": "start-storybook -p 8080",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 8080"
   },
   "keywords": [
     "javascript"
