sort all imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": [
-    "react",
-    "@typescript-eslint"
-  ],
+  "plugins": ["react", "@typescript-eslint", "sort-imports-es6-autofix"],
   "env": {
     "browser": true,
     "jasmine": true,
@@ -22,6 +19,14 @@
       "error",
       {
         "singleQuote": true
+      }
+    ],
+    "sort-imports-es6-autofix/sort-imports-es6": [
+      2,
+      {
+        "ignoreCase": false,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
       }
     ]
   },
