--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-prettier": "5.1.0",
     "eslint-config-react": "1.1.7",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "faker": "^5.5.3",
     "mocha": "9.1.3",
     "parcel": "^2.0.1",
@@ -79,7 +80,8 @@
     "package": "npm run test && npm run build && npm pack",
     "start": "BROWSER=none PORT=4103 react-scripts start",
     "test": "ts-mocha --config ./mocharc.js",
-    "storybook": "start-storybook -p 8080"
+    "storybook": "start-storybook -p 8080",
+    "lint": "eslint ./src/**/*.ts ./src/**/*.tsx ./src/**/*.stories.tsx"
   },
   "keywords": [
     "javascript"
