--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,11 +12,14 @@
     "jest": true
   },
   "rules": {
+    "no-console": "error",
+    "unused-imports/no-unused-imports-ts": "error",
+    "@typescript-eslint/no-unused-vars": "error",
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/ban-ts-ignore": "off",
 
     "prettier/prettier": [
       "error",
