--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calend",
+  "name": "kalend",
   "version": "0.1.3",
   "author": "nibdo",
   "license": "MIT",
@@ -19,7 +19,7 @@
   "style": "dist/styles/index.css",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nibdo/calend"
+    "url": "https://github.com/nibdo/kalend"
   },
   "dependencies": {
     "@swc/helpers": "0.2.14",
