--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "0.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "faker": "5.5.3",
+    "husky": "7.0.4",
     "mocha": "9.1.3",
     "parcel": "2.0.1",
     "prettier": "2.4.1",
@@ -76,6 +77,7 @@
     "react-dom": "17.0.2"
   },
   "scripts": {
+    "prepare": "npx husky install && npx husky add .husky/pre-commit \"npm run lint\"",
     "tsc-build": "tsc --noEmit",
     "build": "npm run tsc-build && parcel build --detailed-report 5",
     "package": "npm run test && npm run build && npm pack",
