--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "eslint-plugin-sort-imports-es6-autofix": "0.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "faker": "5.5.3",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "husky": "7.0.4",
     "mocha": "9.1.3",
     "parcel": "2.0.1",
@@ -81,6 +83,7 @@
   "scripts": {
     "prepare": "npx husky install && npx husky add .husky/pre-commit \"npm run lint\"",
     "tsc-build": "tsc --noEmit",
+    "gulp": "tsc -p tsconfig.worker.json && gulp",
     "build": "npm run tsc-build && parcel build --detailed-report 5",
     "package": "npm run test && npm run build && npm pack",
     "start": "BROWSER=none PORT=4103 react-scripts start",
