--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ calend-*
 #example_app
 /example_app/node_modules
 /example_app/build
+
+#docs
+/docs/node_modules
+/docs/build
+/docs/.docusaurus
+/docs/.cache-loader
