--- a/example_app/package.json
+++ b/example_app/package.json
@@ -17,6 +17,8 @@
     "node-sass": "4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "typescript": "4.5.2",
     "uuid": "^8.3.2"
   },
