--- a/example_app/package.json
+++ b/example_app/package.json
@@ -29,6 +29,7 @@
     "@types/node": "14.17.34",
     "@types/react": "17.0.35",
     "@types/react-dom": "17.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "8.3.3",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "5.4.0",
