--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "mocha": "9.1.3",
     "parcel": "2.0.1",
     "prettier": "2.4.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "sass-loader": "10.0.0",
     "style-loader": "2.0.0",
