--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@swc/helpers": "0.2.14",
+    "color": "4.2.3",
     "kalend-layout": "0.0.11",
     "luxon": "2.3.1",
     "regenerator-runtime": "0.13.9"
@@ -41,6 +42,7 @@
     "@storybook/addon-links": "6.4.8",
     "@storybook/preset-scss": "1.0.3",
     "@storybook/react": "6.4.8",
+    "@types/color": "3.0.3",
     "@types/faker": "5.5.9",
     "@types/jest": "27.0.3",
     "@types/luxon": "2.0.7",
