--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "typescript": "4.5.2"
   },
   "peerDependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "prepare": "npx husky install && npx husky add .husky/pre-commit \"npm run lint\"",
