--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kalend",
-  "version": "0.14.6",
+  "version": "0.14.7",
   "author": "nibdo",
   "license": "MIT",
   "private": false,
@@ -76,8 +76,8 @@
     "typescript": "4.5.2"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "17.0.2 - 18",
+    "react-dom": "17.0.2 - 18"
   },
   "scripts": {
     "prepare": "npx husky install && npx husky add .husky/pre-commit \"npm run lint\"",
